<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bookingCancelReason"
    app:behavior_peekHeight="70dp"
    android:background="@drawable/top_radius_drawable"

    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
<!--    android:background="@android:color/transparent"-->
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        style="@style/slider_layout">
<!--        android:elevation="@dimen/dimen_0dp"-->
<!--        app:cardElevation="@dimen/dimen_0dp"-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_gravity="top|center"
            android:gravity="center">

<!--            <View-->
<!--                android:layout_width="20dp"-->
<!--                android:layout_height="2dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:background="@android:color/darker_gray" />-->

            <ImageView
                android:id="@+id/bookingCancelReasonSheetClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_expand_more_24"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/top_margin_left"
            android:layout_marginRight="@dimen/top_margin_right"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <com.google.android.material.textview.MaterialTextView
                        style="@style/inner_heading_text_name"
                        android:layout_width="0dp"
                        android:layout_weight="0.9"
                        android:layout_height="wrap_content"
                        android:text="@string/booking_cancel">
                    </com.google.android.material.textview.MaterialTextView>
                    <ImageView
                        android:id="@+id/bookingCancelReasonClose"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_close_24"
                        android:layout_weight="0.1"/>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/top_margin_left"
                android:layout_marginBottom="@dimen/dimen_20dp"
                style="@style/content_text_dark_gray"
                android:text="@string/booking_cancel_msg_1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        style="@style/content_text_dark_gray"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/plan_changed"></com.google.android.material.radiobutton.MaterialRadioButton>

                    <com.google.android.material.radiobutton.MaterialRadioButton
                        style="@style/content_text_dark_gray"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Driver_denied_duty">
                    </com.google.android.material.radiobutton.MaterialRadioButton>
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        style="@style/content_text_dark_gray"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/unable_to_contact_driver">
                    </com.google.android.material.radiobutton.MaterialRadioButton>
                    <com.google.android.material.radiobutton.MaterialRadioButton
                        style="@style/content_text_dark_gray"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/my_account_is_not_listed">
                    </com.google.android.material.radiobutton.MaterialRadioButton></RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bookingCancelReason_dontCancel"
                    style="@style/medium_button_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dont_cancel"
                    android:layout_margin="@dimen/dp_4"/>

                <Button
                    android:id="@+id/bookingCancelReason_cancel"
                    style="@style/medium_button_theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel_ride"
                    android:layout_margin="@dimen/dp_4"/>

            </LinearLayout>

         </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>