<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:padding="@dimen/dimen_10dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_confirm_msg"
        style="@style/inner_heading_text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm_text"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout8"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="@dimen/top_margin_right"
        android:layout_marginLeft="@dimen/top_margin_left"
        tools:layout_editor_absoluteX="8dp" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="right"
        android:layout_marginBottom="@dimen/top_margin_bottom">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmDialog_cancelBtn"
            style="@style/medium_button_theme"
            android:layout_width="100dp"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="bottom"
            android:layout_marginRight="@dimen/top_margin_right"
            android:layout_marginLeft="@dimen/top_margin_left"
            android:text="@string/cancel">

        </com.google.android.material.button.MaterialButton>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/confirmDialog_okButton"
            style="@style/medium_button_theme"
            android:layout_width="100dp"
            android:layout_height="@dimen/button_height"
            android:layout_gravity="bottom"
            android:layout_marginLeft="@dimen/top_margin_left"
            android:layout_marginRight="@dimen/top_margin_right"
            android:text="@string/ok">

        </com.google.android.material.button.MaterialButton>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>